--- a/index.html
+++ b/index.html
@@ -1,33 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <!-- reset user agent css -->
+  <link rel="stylesheet" href="./reset.css">
+  <!-- Use my custom stylesheet -->
+  <link rel="stylesheet" href="./index.css">
   <title>Frontend Mentor | NFT preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <main>
+    <h1 class="sr-only">NFT preview card component</h1>
+    <div class="container">
+      <div class="card">
+        <div class="image-container">
+          <img class="main-img" src="./images/image-equilibrium.jpg" alt="equilibrium image" />
+          <div class="image-overlay">
+            <img class="overlay-view-icon" src="./images/icon-view.svg" alt aria-hidden="true" />
+          </div>
+        </div>
+        <h2 class="card-title"> Equilibrium #3429</h2>
+        <p class="card-description">
+          Our Equilibrium collection promotes
+          balance and calm.
+        </p>
 
-  Equilibrium #3429
+        <div class="info-container">
+          <div class="price-container">
+            <img src="./images/icon-ethereum.svg" alt aria-hidden="true" />
+            <span class="card-price">0.041 ETH</span>
+          </div>
+          <div class="duration-container">
+            <img src="./images/icon-clock.svg" alt aria-hidden="true" />
+            <span class="card-duration"> 3 days left</span>
+          </div>
+        </div>
 
-  Our Equilibrium collection promotes balance and calm.
+        <hr />
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+        <div class="creator-container">
+          <img src="./images/image-avatar.png" alt="image of Jules Wyvern" />
+          <p>Creation of <a class="creator-name">Jules Wyvern</a> </p>
+        </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </footer>
+
 </body>
+
 </html>
